--- a/carrot.css
+++ b/carrot.css
@@ -2,3 +2,199 @@
   margin: 0;
   padding: 0;
 }
+
+.app-download {
+  display: flex;
+  justify-content: center;
+  background-color: #fffae0;
+  height: 800px;
+}
+
+.app-download-left {
+  display: flex;
+  flex-direction: column;
+  margin-left: 120px;
+  margin-right: 80px;
+}
+
+.app-download-left h1 {
+  font-size: 54px;
+  font-weight: 700;
+  line-height: 73px;
+  padding-top: 200px;
+  margin-bottom: 3.2rem;
+}
+
+.app-download-left h2 {
+  font-weight: 400;
+  font-size: 20px;
+  color: #7c7c7c;
+  line-height: 30px;
+}
+
+.app-download-buttons {
+  display: flex;
+  margin-top: 20px;
+}
+
+.app-download-button {
+  display: flex;
+  align-items: center;
+  background: #ff6f0f;
+  border-radius: 10px;
+  width: 180px;
+  height: 56px;
+  font-weight: 400;
+  border: 0;
+  justify-content: center;
+  margin: 10px;
+  text-decoration-line: none;
+}
+
+.app-download-buttons img {
+  fill: #fff;
+  height: 20px;
+  width: auto;
+}
+
+.app-download-buttons p {
+  color: #fff;
+  font-size: 16px;
+  margin-left: 8px;
+  font-weight: 700;
+  line-height: 28px;
+}
+
+.app-download-right img {
+  width: 655px;
+  height: 800px;
+}
+
+.footer {
+  background-color: #ffffff;
+  color: #212124;
+  border-top: 1px solid #eaebee;
+  padding: 0 1.6rem;
+  box-sizing: border-box;
+  max-width: 100vw;
+  margin: 0 auto;
+}
+
+.footer-top {
+  display: flex;
+  justify-content: center;
+  line-height: 1.4;
+  padding: 4.8rem;
+  font-size: 14px;
+}
+
+.footer-top nav {
+  display: flex;
+  max-width: 76.8rem;
+  width: 464px;
+  height: 258px;
+  line-height: 4;
+}
+
+.footer-top-list {
+  display: flex;
+  flex-direction: column;
+  padding-inline-start: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  width: 33%;
+}
+
+.footer-top-list a {
+  text-decoration-line: none;
+  color: inherit;
+}
+
+.footer-app-download {
+  float: right;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-app-download-buttons {
+  display: flex;
+}
+
+.footer-app-download a {
+  display: flex;
+  align-items: center;
+  background: #f2f3f6;
+  border-radius: 10px;
+  width: 147px;
+  height: 46.4px;
+  border: 0;
+  justify-content: center;
+  margin-top: 0.8rem;
+  text-decoration-line: none;
+}
+
+.footer-app-download p {
+  color: black;
+  margin-left: 8px;
+  font-weight: 550;
+}
+
+.footer-app-download-button-2 {
+  margin-left: 1rem;
+}
+
+.footer-app-download-buttons img {
+  filter: invert(100%);
+}
+
+.footer-bottom {
+  color: #868b94;
+  padding: 2.4rem 0 10rem;
+  font-size: 13px;
+  margin: 0 auto;
+  width: 768px;
+  border-top: 1px solid #eaebee;
+}
+
+.footer-bottom a {
+  color: inherit;
+  text-decoration-line: none;
+}
+
+.footer-bottom-1 {
+  display: flex;
+  justify-content: space-between;
+  line-height: 1.5;
+}
+
+.footer-socialmedia {
+  display: flex;
+}
+
+.footer-socialmedia-button {
+  margin-right: 1.6rem;
+}
+
+.footer-socialmedia img {
+  width: 21px;
+  height: auto;
+  filter: invert(50%);
+}
+
+.footer-socialmedia label {
+  display: flex;
+}
+
+.footer-bottom-2 {
+  display: flex;
+  font-weight: 700;
+}
+
+.footer-bottom-3 {
+  display: flex;
+  font-weight: 700;
+}
+
+.footer-bottom-button {
+  margin-right: 1.6rem;
+}
